--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,117 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Reproducible Research Project 1"
+author: "Daniel Sumner"
+date: "March 6, 2016"
+output: html_document
 ---
 
+##Introduction
 
-## Loading and preprocessing the data
+It is now possible to collect a large amount of data about personal movement using activity monitoring devices such as a Fitbit, Nike Fuelband, or Jawbone Up. These type of devices are part of the "quantified self" movement - a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. But these data remain under-utilized both because the raw data are hard to obtain and there is a lack of statistical methods and software for processing and interpreting the data.
 
+This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.
 
+This assignment is from the JHU Coursera Course
 
-## What is mean total number of steps taken per day?
+Step 1: Code for reading in the dataset and/or processing the data
 
+```{r}
+library(knitr)
+library(ggplot2)
+library(dplyr)
+library(lubridate)
 
+data <- read.csv("activity.csv", header = TRUE, sep = ',', colClasses = c("numeric", "character",
+                                                                          "integer"))
+data$date <- ymd(data$date)
+```
 
-## What is the average daily activity pattern?
+2. Histogram of the total number of steps taken each day
 
+```{r}
+#Create new dataset which is total steps per date and removes the NAs
+steps <- data %>%
+    filter(!is.na(steps)) %>%
+    group_by(date) %>%
+    summarize(steps = sum(steps))
+#Create a histogram with Steps as the x-axis and total days as the y-axis
+hist(steps$steps, main="Total number of steps taken each day", xlab = "Steps", ylab = "Total Days", col="blue")
+```
 
+3. Mean and median number of steps taken each day
 
-## Imputing missing values
+```{r}
+#Calculate the mean of steps per day
+mean(steps$steps)
+#Calculate the median of steps per day
+median(steps$steps)
+```
 
+4. Time series plot of the average number of steps taken
 
+```{r}
+#Create new dataset which has the average steps per interval
+tseries <- data %>%
+    filter(!is.na(steps)) %>%
+    group_by(interval) %>%
+    summarize(steps = mean(steps))
 
-## Are there differences in activity patterns between weekdays and weekends?
+#Creates a time-series on the new dataset for average steps per interval
+plot.ts(tseries$steps, ylab = "Steps", xlab="Interval")
+```
+
+5. The 5-minute interval that, on average, contains the maximum number of steps
+
+```{r}
+#Determines which interval in the new dataset tseries has the maximum steps i.e. the maximum average
+tseries[which.max(tseries$steps),1]
+```
+
+6. Code to describe and show a strategy for imputing missing data
+
+The strategy I will use is to use the mean number of steps for that interval to replace the NA values, the below code will accomplush that:
+
+```{r}
+
+complete_data <- data
+NA_list <- is.na(complete_data$steps)
+avg_interval <- tapply(complete_data$steps, complete_data$interval, mean, na.rm=TRUE, simplify=TRUE)
+complete_data$steps[NA_list] <- avg_interval[as.character(complete_data$interval[NA_list])]
+```
+
+7. Histogram of the total number of steps taken each day after missing values are imputed
+
+```{r}
+complete_steps <- complete_data %>%
+    filter(!is.na(steps)) %>%
+    group_by(date) %>%
+    summarize(steps = sum(steps))
+#Create a histogram with Steps as the x-axis and total days as the y-axis
+hist(complete_steps$steps, main="Total number of steps taken each day", xlab = "Steps", ylab = "Total Days", col="blue")
+
+#Calculate the mean of steps per day
+mean(complete_steps$steps)
+#Calculate the median of steps per day
+median(complete_steps$steps)
+```
+
+The mean did not change as essentially more mean values were added, however the median became the mean because that mean value was imputed many times and therefore became the median.
+
+8. Panel plot comparing the average number of steps taken per 5-minute interval across weekdays and weekends
+
+```{r}
+#Add field which identifies whether the day is a weekday or weekend
+complete_data <- mutate(complete_data, weekday_weekend_flag = ifelse(weekdays(complete_data$date) == "Saturday" | weekdays(complete_data$date) == "Sunday", "weekend", "weekday"))
+
+#Create new dataset which has the average steps per interval and per weekday/weekend flag
+complete_tseries <- complete_data %>%
+    filter(!is.na(steps)) %>%
+    group_by(interval,weekday_weekend_flag) %>%
+    summarize(steps = mean(steps))
+
+#load lattice package
+library(lattice)
+
+#Plot the time series data split by weekday and weekend
+xyplot(steps~interval|weekday_weekend_flag, data=complete_tseries, type="l",  layout = c(1,2), main="Average Steps per Interval Based on Type of Day", ylab="Number of Steps", xlab="Interval")
+```
